--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^3.0.10
+  cached_network_image: ^2.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
