--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   dio: ^3.0.10
   cached_network_image: ^2.5.1
+  charts_flutter: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
