--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 #.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
+**/doc/services.api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
